--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Royal Canadian Mounted Police -- Fiction'
 - !lcsh 'Mounted police -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: 'The Luck of the Mounted: A Tale of the Royal Northwest Mounted Police'
 url: http://www.gutenberg.org/ebooks/15940
